# RPi_CV

./: CMakeLists.txt  README.md
include/: helper_3dmath.h  mpu6500.h
include/inv_mpu_lib/: inv_mpu.h  inv_mpu_dmp.h
lib/I2Cdev/: CMakeLists.txt
src/: CMakeLists.txt
src/mpu6500/: CMakeLists.txt  inv_mpu.c  inv_mpu_dmp.c  mpu6500.cpp
tests/: CMakeLists.txt  mpu6500_main.cpp
