CMAKE_MINIMUM_REQUIRED( VERSION 2.8 ) #设定最小版本号

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(./inv_mpu_lib)

AUX_SOURCE_DIRECTORY(. SRC_LIST)
AUX_SOURCE_DIRECTORY(./lib SRC_LIB_LIST)
ADD_LIBRARY(mpu6500 STATIC ${SRC_LIST} ${SRC_LIB_LIST})

#TARGET_LINK_LIBRARIES(mpu6500 halio miniglog gflags concurrency)


